[package]
name = "openvr"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/anatawa12/openvr-rust-wrapper.git"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openvr_sys = "=2.1.1"
once_cell = "1"
memchr = "2"

[build-dependencies]
serde_json = "1.0"
serde = { version="1", features=["derive"] }
